changed .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-**./Les01
-**./Les05
-**./Les06
-**./Les07
-**./Les08
-**./command line extra opdracht
-**./command line opdracht
+**/Les01
+**/Les05
+**/Les06
+**/Les07
+**/Les08
+**/command line extra opdracht
+**/command line opdracht
