.gitignore aangepast en map Les05 toegevoegd

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 **/Les01
 **/Les03
-**/Les05
 **/Les06
 **/Les07
 **/Les08
 **/command line extra opdracht
 **/command line opdracht
+**/git cheatsheet
